error.txt
haris@haris-desktop:~/celestial-nav/build$ cmake --build .
[ 12%] Building CXX object CMakeFiles/celestial_nav.dir/src/main.cpp.o
[ 25%] Building CXX object CMakeFiles/celestial_nav.dir/src/image_acquisition.cpp.o
[ 37%] Building CXX object CMakeFiles/celestial_nav.dir/src/preprocessing.cpp.o
[ 50%] Building CXX object CMakeFiles/celestial_nav.dir/src/star_detection.cpp.o
[ 62%] Building CXX object CMakeFiles/celestial_nav.dir/src/star_matching.cpp.o
[ 75%] Building CXX object CMakeFiles/celestial_nav.dir/src/location_determination.cpp.o
In file included from /usr/include/eigen3/unsupported/Eigen/NumericalDiff:51,
                 from /usr/include/eigen3/unsupported/Eigen/NonLinearOptimization:18,
                 from /home/haris/celestial-nav/src/location_determination.cpp:11:
/usr/include/eigen3/unsupported/Eigen/src/NumericalDiff/NumericalDiff.h: In instantiation of ‘class Eigen::NumericalDiff<LocationFunctor>’:
/home/haris/celestial-nav/src/location_determination.cpp:208:58:   required from here
/usr/include/eigen3/unsupported/Eigen/src/NumericalDiff/NumericalDiff.h:57:40: error: ‘InputsAtCompileTime’ is not a member of ‘Eigen::NumericalDiff<LocationFunctor>::Functor’ {aka ‘LocationFunctor’}
   57 |         InputsAtCompileTime = Functor::InputsAtCompileTime,
      |                                        ^~~~~~~~~~~~~~~~~~~
/usr/include/eigen3/unsupported/Eigen/src/NumericalDiff/NumericalDiff.h:58:40: error: ‘ValuesAtCompileTime’ is not a member of ‘Eigen::NumericalDiff<LocationFunctor>::Functor’ {aka ‘LocationFunctor’}
   58 |         ValuesAtCompileTime = Functor::ValuesAtCompileTime
      |                                        ^~~~~~~~~~~~~~~~~~~
gmake[2]: *** [CMakeFiles/celestial_nav.dir/build.make:146: CMakeFiles/celestial_nav.dir/src/location_determination.cpp.o] Error 1
gmake[1]: *** [CMakeFiles/Makefile2:83: CMakeFiles/celestial_nav.dir/all] Error 2
gmake: *** [Makefile:91: all] Error 2
haris@haris-desktop:~/celestial-nav/build$ 